feat : 숫자비교 로직 테스트 구현